--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/expoMainlogo.png" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
+  <meta name="keywords" content="exposition, exposition issue 19, exposition 19 , emagazine, university of kelaniya, magazine, univeristy magazine">
+  <meta name="description" content="The Exposition, organized by the Industrial Management Science Students' Association at the University of Kelaniya, is a vital nexus where Management and IT converge. With nearly two decades of history, it sparks innovation and collaboration. 
+
+  Under the theme 'A Thought Leader in Digital Transformation,' it aims to bridge the gap between IT and Management fields, propelling progress in both realms.">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
     href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap"
